--- a/CarHub/assets/css/styless2.css
+++ b/CarHub/assets/css/styless2.css
@@ -63,27 +63,32 @@ section{
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 500px;
-    display: flex;
-    justify-content: end;
-    flex-flow: row nowrap;
-    align-items: flex-start;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5rem;
 }
 
 .offroad-text{
-    flex: 0 0 50%;
     text-align: center;
 }
 
+.offroad-text p{
+    font-size: 1.5rem;
+    color: #ffffff;
+}
+
 .offroad-text h1, h2{
-    color: white;
+    font-weight: 400;
+    margin: 0 2rem;
+    color: #fdfbfa;
 }
 
 h1{
-    margin-bottom: 70px;
-    text-transform: uppercase;
-    font-size: 2.5rem;
     color: #000000;
+    font-size: 2.3rem;
+    font-weight: bold;
+    letter-spacing: 0.3rem;
+    text-transform: uppercase;
     text-align: center;
 }
 
@@ -182,17 +187,6 @@ p{
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
 footer{
     background-color: #000;
 }
@@ -204,17 +198,15 @@ footer{
     gap: 20px;
 }
 
-.texto-contacto{
-    font-size: 1.6rem;
-    color: #ffffff;
-    text-align: left;
-    font-weight: 400;
-    margin-top: 10px;
+.footer-container h3{
+    margin-bottom: 2rem;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    color: #f3f2f2;
 }
 
-
-
 .footer-parrafo{
+    font-size: 1.2rem;
     line-height: 40px;
     color: #ffffff;
 }
@@ -243,3 +235,60 @@ footer{
 .icons a:hover{
     background-color: transparent;
 }
+
+@media (max-width:575px){
+    h1{
+        font-size: 1.5rem;
+    }
+
+    .off-road{
+        grid-template-columns: repeat(1, 1fr)
+    }
+
+    .offroad-text{
+        width: 100%;
+    }
+
+    .offroad-text h1, h2{
+        font-size: 1.5rem;
+    }
+
+    .texto-parrafo{
+        color: #ABABAB;
+    }
+
+    .catalogo-container{
+        display: grid;
+        justify-content: unset;
+    }
+
+    .card{
+        width: 100%;
+    }
+
+    .icons{
+        width: 100%;
+    }
+
+    .footer-container{
+        justify-items: center;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 4rem 0;
+    }
+
+    .footer-container h3{
+        font-size: 1.2rem;
+    }
+
+    .footer-parrafo{
+        font-size: 0.9rem;
+    }
+}
+
+
+
+
+
+
+
+
