--- a/CarHub/assets/css/styles3.css
+++ b/CarHub/assets/css/styles3.css
@@ -63,34 +63,35 @@ section{
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 500px;
-    display: flex;
-    justify-content: center;
-    flex-flow: row nowrap;
-    align-items: flex-start;
+    display: grid;
 }
 
 .offroad-text{
     text-align: center;
 }
 
+.offroad-text p{
+    font-size: 1.5rem;
+    color: #ffffff;
+}
+
 .offroad-text h1, h2{
-    color: white;
+    font-weight: 400;
+    margin: 0 2rem;
+    color: #fdfbfa;
 }
 
 h1{
-    margin-bottom: 70px;
     text-transform: uppercase;
     font-size: 2.5rem;
     color: #000000;
     text-align: center;
 }
 
-p{
-    font-size: 1.5rem;
-    color: #ABABAB;
+.texto-parrafo2{
+    color: white;
+    font-size: 1.2rem;
 }
-
 .catalogo-container{
     display: flex;
     justify-content: space-between;
@@ -234,9 +235,6 @@ p{
     position: relative;
 }
 
-
-
-
 footer{
     background-color: #000;
 }
@@ -248,15 +246,12 @@ footer{
     gap: 20px;
 }
 
-.texto-contacto{
-    font-size: 1.6rem;
-    color: #ffffff;
-    text-align: left;
-    font-weight: 400;
-    margin-top: 10px;
+.footer-container h3{
+    margin-bottom: 2rem;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    color: #f3f2f2;
 }
-
-
 
 .footer-parrafo{
     line-height: 40px;
@@ -286,4 +281,49 @@ footer{
 
 .icons a:hover{
     background-color: transparent;
+}
+
+@media (max-width:575px){
+    h1{
+        font-size: 1.5rem;
+    }
+
+    .offroad-text{
+        width: 100%;
+    }
+
+    .offroad-text h1, h2{
+        font-size: 1.5rem;
+    }
+
+    .texto-parrafo{
+        color: #ABABAB;
+    }
+
+    .catalogo-container{
+        display: grid;
+        justify-content: unset;
+    }
+
+    .card{
+        width: 100%;
+    }
+
+    .texto-parrafo2{
+        text-align: center;
+    }
+
+
+    .footer-container{
+        grid-template-columns: repeat(1, 1fr);
+        gap: 4rem 0;
+    }
+
+    .footer-container h3{
+        font-size: 1.2rem;
+    }
+
+    .footer-parrafo{
+        font-size: 0.9rem;
+    }
 }
