--- a/CarHub/assets/css/styles4.css
+++ b/CarHub/assets/css/styles4.css
@@ -63,32 +63,34 @@ section{
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 500px;
-    display: flex;
-    flex-flow: column nowrap;
-
+    display: grid;
 }
 
 .offroad-text{
-    width: 700px;
+    width: 40%;
     text-align: center;
 }
 
+.offroad-text p{
+    font-size: 1.5rem;
+    color: #ffffff;
+}
+
 .offroad-text h1, h2{
+    margin: 0 2rem;
     color: white;
 }
 
 h1{
-    margin-bottom: 70px;
     text-transform: uppercase;
     font-size: 2.5rem;
     color: #000000;
     text-align: center;
 }
 
-p{
-    font-size: 1.5rem;
-    color: #ABABAB;
+.texto-parrafo2{
+    color: white;
+    font-size: 1.2rem;
 }
 
 .catalogo-container{
@@ -236,10 +238,6 @@ p{
     color: white;
 }
 
-
-
-
-
 footer{
     background-color: #000;
 }
@@ -251,15 +249,12 @@ footer{
     gap: 20px;
 }
 
-.texto-contacto{
-    font-size: 1.6rem;
-    color: #ffffff;
-    text-align: left;
-    font-weight: 400;
-    margin-top: 10px;
+.footer-container h3{
+    margin-bottom: 2rem;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    color: #f3f2f2;
 }
-
-
 
 .footer-parrafo{
     line-height: 40px;
@@ -290,3 +285,51 @@ footer{
 .icons a:hover{
     background-color: transparent;
 }
+
+@media (max-width:575px){
+    h1{
+        font-size: 1.5rem;
+    }
+
+    .offroad-text{
+        width: 100%;
+    }
+
+    .offroad-text h1, h2{
+        font-size: 1.5rem;
+    }
+
+    .texto-parrafo{
+        color: #ABABAB;
+    }
+
+    .catalogo-container{
+        display: grid;
+        justify-content: unset;
+    }
+
+    .card{
+        width: 100%;
+    }
+
+    .texto-parrafo2{
+        text-align: center;
+    }
+
+
+    .footer-container{
+        grid-template-columns: repeat(1, 1fr);
+        gap: 4rem 0;
+    }
+
+    .footer-container h3{
+        font-size: 1.2rem;
+    }
+
+    .footer-parrafo{
+        font-size: 0.9rem;
+    }
+}
+
+
+
