solución a error del commit

--- a/CarHub/assets/css/styless2.css
+++ b/CarHub/assets/css/styless2.css
@@ -285,6 +285,32 @@ footer{
     }
 }
 
+@media (min-width:576px) and (max-width:959px){
+
+    .catalogo-container{
+        display: grid;
+        gap: 3.5rem;
+        justify-content: unset;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .card{
+        width: 100%;
+    }
+
+    .texto-parrafo2{
+        text-align: center;
+    }
+
+    .footer-container h3{
+        font-size: 1.5rem;
+    }
+
+    .footer-parrafo{
+        font-size: 1.2rem;
+    }
+}
+
 
 
 
