--- a/CarHub/assets/css/styles.css
+++ b/CarHub/assets/css/styles.css
@@ -239,6 +239,7 @@ footer{
 }
 
 @media (max-width:575px){
+    
     h1{
         font-size: 1.5rem;
     }
@@ -275,5 +276,42 @@ footer{
     .footer-parrafo{
         font-size: 0.9rem;
     }
+
+}
+
+@media (min-width:576px) and (max-width:959px){
+
+    h1{
+        font-size: 2rem;
+    }
+    .nosotros-text{
+        width: 100%;
+    }
+
+    .nosotros-text h1, h2{
+        font-size: 2.5rem;
+    }
+
+    .texto-parrafo{
+        font-size: 1.5rem;
+    }
+
+    .about-mantenimiento{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .texto-parrafo2{
+        text-align: center;
+    }
+
+    .footer-container h3{
+        font-size: 1.5rem;
+    }
+
+    .footer-parrafo{
+        font-size: 1.2rem;
+    }
+
+    
 
 }
