--- a/CarHub/assets/css/styles.css
+++ b/CarHub/assets/css/styles.css
@@ -52,6 +52,21 @@ nav a:hover {
     align-items: center;
 }
 
+.checkbtn{
+    font-size: 30px;
+    color: #ff0000;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+#check{
+    display: none;
+    float: right;
+}
+
 section{
     padding: 100px 0;
 }
@@ -239,10 +254,62 @@ footer{
 }
 
 @media (max-width:575px){
+
+    .checkbtn{
+        display: block;
+    }
+
+    header{
+        width: 100%;
+        position: fixed;
+    }
+
+    .nav-container-1 img{
+        height: 2.5;
+    }
+
+    ul{
+        position: fixed;
+        width: 100%;
+        background: #E2E2E2;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
     
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+
+    #check:checked ~ ul{
+        left: 0;
+    }
+
+    .off-sale *{
+        position: unset;
+    }
+
+    .overlay, .off-sale::before{
+        display: none;
+    }
+
+    .off-sale {
+        position: unset;
+    }
+
+    .nosotros{
+        position: unset;
+    }
+
     h1{
         font-size: 1.5rem;
     }
+
+    
+
     .nosotros-text{
         width: 100%;
     }
@@ -259,10 +326,13 @@ footer{
         grid-template-columns: repeat(1, 1fr);
     }
 
+    .content-image{
+        position: unset;
+    }
+
     .texto-parrafo2{
         text-align: center;
     }
-
 
     .footer-container{
         grid-template-columns: repeat(1, 1fr);
